--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "native-base": "^2.3.2",
     "react": "16.0.0-beta.5",
-    "react-native": "0.49.3"
+    "react-native": "0.49.3",
+    "react-native-vector-icons": "^4.4.2",
+    "react-navigation": "^1.0.0-beta.13",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-jest": "21.2.0",
+    "babel-plugin-module-alias": "^1.6.0",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
     "react-test-renderer": "16.0.0-beta.5"
