Feat [ #1 ] : as a user i can scan a qr code to login

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
       { "src": "./src", "expose": "app" },
       { "src": "./assets", "expose": "assets" },
       { "src": "./shared", "expose": "shared" },
+      { "src": "./native-base-theme", "expose": "nb-theme" },
     ]]
   ]
 }
