--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="22" />
 
+    <uses-permission
+        android:name="android.permission.VIBRATE"/>
+
     <application
       android:name=".MainApplication"
       android:allowBackup="true"
