--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-modal": "^4.1.0",
     "react-native-orientation": "^3.1.0",
     "react-native-qrcode-scanner": "0.0.22",
-    "react-native-vector-icons": "4.4.2",
+    "react-native-svg": "^5.4.2",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "1.0.0-beta.13",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
