--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "color": "^2.0.0",
     "lodash": "4.17.4",
+    "lottie-react-native": "^2.2.7",
     "native-base": "2.3.2",
-    "react": "16.0.0-beta.5",
+    "react": "16.0.0",
     "react-native": "0.49.3",
     "react-native-camera": "^0.10.0",
     "react-native-dash": "0.0.7",
     "react-native-modal": "^4.1.0",
     "react-native-orientation": "^3.1.0",
+    "react-native-pull-refresh": "^1.0.0",
     "react-native-qrcode-scanner": "0.0.22",
     "react-native-svg": "^5.4.2",
     "react-native-vector-icons": "^4.4.2",
