--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "color": "^2.0.0",
+    "color": "2.0.0",
     "lodash": "4.17.4",
-    "lottie-react-native": "^2.2.7",
-    "native-base": "2.3.2",
-    "react": "16.0.0",
+    "lottie-react-native": "2.2.7",
+    "native-base": "2.3.3",
+    "react": "16.0.0-alpha.12",
     "react-native": "0.49.3",
-    "react-native-camera": "^0.10.0",
+    "react-native-camera": "0.10.0",
     "react-native-dash": "0.0.7",
-    "react-native-modal": "^4.1.0",
-    "react-native-orientation": "^3.1.0",
-    "react-native-pull-refresh": "^1.0.0",
+    "react-native-modal": "4.1.0",
+    "react-native-orientation": "3.1.0",
+    "react-native-pull-refresh": "1.0.0",
     "react-native-qrcode-scanner": "0.0.22",
-    "react-native-svg": "^5.4.2",
-    "react-native-vector-icons": "^4.4.2",
+    "react-native-svg": "5.4.2",
+    "react-native-vector-icons": "4.4.2",
     "react-navigation": "1.0.0-beta.13",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
-    "redux-promise": "^0.5.3",
-    "rn-placeholder": "^1.1.0",
-    "rn-sliding-up-panel": "^1.1.6"
+    "redux-promise": "0.5.3",
+    "rn-placeholder": "1.1.0",
+    "rn-sliding-up-panel": "1.1.6"
   },
   "devDependencies": {
     "babel": "6.23.0",
