--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "native-base": "2.3.2",
     "react": "16.0.0",
     "react-native": "0.49.3",
-    "react-native-camera": "^0.10.0",
+    "react-native-camera": "0.10.0",
     "react-native-dash": "0.0.7",
     "react-native-modal": "^4.1.0",
     "react-native-orientation": "^3.1.0",
@@ -25,7 +25,8 @@
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "rn-placeholder": "^1.1.0",
-    "rn-sliding-up-panel": "^1.1.6"
+    "rn-sliding-up-panel": "^1.1.6",
+    "rxjs": "^5.5.2"
   },
   "devDependencies": {
     "babel": "6.23.0",
