--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ buck-out/
 react-native-packager-cache-*
 haste-map-react-native-packager-1-*
 react-native-packager-cache-*
+
+package-lock.json
+
+ios/confIOReviewer.xcworkspace/
+ios/Podfile.lock
+ios/Pods
