--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "redux-devtools": "redux-devtools --hostname=localhost --port=9090"
   },
   "dependencies": {
     "color": "2.0.0",
     "lodash": "4.17.4",
-    "lottie-react-native": "2.2.7",
+    "lottie-react-native": "2.5.7",
     "native-base": "2.3.3",
     "react": "16.0.0-alpha.12",
     "react-native": "0.49.3",
@@ -27,7 +28,7 @@
     "redux-promise": "0.5.3",
     "rn-placeholder": "1.1.0",
     "rn-sliding-up-panel": "1.1.6",
-    "rxjs": "5.5.2"
+    "rxjs": "6.5.2"
   },
   "devDependencies": {
     "babel": "6.23.0",
@@ -35,7 +36,8 @@
     "babel-plugin-module-resolver": "3.1.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0-beta.5"
+    "react-test-renderer": "16.0.0-beta.5",
+    "remote-redux-devtools": "^0.5.16"
   },
   "jest": {
     "preset": "react-native"
